--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Chateaubriand, François-René, vicomte de, 1768-1848'
+- GITenberg
 title: Chateaubriand
 url: http://www.gutenberg.org/ebooks/17319
